--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,41 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  padding: 40px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+div {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  border: 2px solid green;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  label {
+    display: flex;
+    align-items: center;
+    gap: 20px;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+input {
+  border: 1px solid black;
+  padding: 8px;
+  border-radius: 4px;
+}
+
+input:invalid {
+  border: 1px solid red;
+}
+
+button {
+  background-color: black;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken(black, 10%);
+  }
 }
