--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,41 +1,15 @@
 @import "tailwindcss";
 
+:root {
+  --background-main: #EEF5FF;
+  --blue-dark: #0A274E;
+  --blue: #6259FF;
+  --purple: #483EFF;
+  --font-primary: 'Poppins';
+  --font-secondary: 'DynaPuff';
+}
+
 body {
-  padding: 40px;
-}
-
-div {
-  display: flex;
-  gap: 20px;
-  flex-direction: column;
-  border: 2px solid green;
-
-  label {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-  }
-}
-
-input {
-  border: 1px solid black;
-  padding: 8px;
-  border-radius: 4px;
-}
-
-input:invalid {
-  border: 1px solid red;
-}
-
-button {
-  background-color: black;
-  color: white;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-
-  &:hover {
-    background-color: darken(black, 10%);
-  }
+  background-color: var(--background-main);
+  font-family: var(--font-primary);
 }
