almost animations finished .. some touches is needed :) .. gsap not bad thing !

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --blue-dark: #0A274E;
   --blue: #6259FF;
   --purple: #483EFF;
+  --red: #d63031;
   --font-primary: 'Poppins';
   --font-secondary: 'DynaPuff';
 }
